--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -45,6 +45,7 @@ MultipleInstanceLastHeight=720
 MultipleInstanceLastWidth=1280
 LastExecutedLaunchDevice=WindowsNoEditor@JT-LAPTOP
 LastExecutedLaunchName=JT-LAPTOP
+NewWindowPosition=(X=105,Y=103)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 bInvertMouseLookYAxis=False
@@ -66,7 +67,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport2",ConfigSettin
 PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettings=(ViewportType=LVT_OrthoXY,PerspViewModeIndex=VMI_Lit,OrthoViewModeIndex=VMI_BrushWireframe,EditorShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=1,TestImage=0,VisualizeDOF=0,VisualizeAdaptiveDOF=0,VertexColors=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=1,ScreenSpaceReflections=1,SubsurfaceScattering=1,VisualizeSSS=0,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,SkinCache=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,CameraFrustums=0,AudioRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=1,Snap=0,MeshEdges=0,Cover=0,Splines=1,Selection=1,ModeWidgets=1,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=1,Fog=1,Volumes=1,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,AtmosphericFog=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HighResScreenshotMask=0,HMDDistortion=1,StereoRendering=0,DistanceCulledPrimitives=1,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeDistanceFieldGI=0,VisualizeMeshDistanceFields=0,ScreenSpaceAO=1,DistanceFieldAO=1,DistanceFieldGI=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,VisualizeBloom=0,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,WidgetComponents=1",GameShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VisualizeAdaptiveDOF=0,VertexColors=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=0,ScreenSpaceReflections=1,SubsurfaceScattering=1,VisualizeSSS=0,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,SkinCache=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,CameraFrustums=0,AudioRadius=0,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=0,BSPTriangles=0,LargeVertices=0,Grid=0,Snap=0,MeshEdges=0,Cover=0,Splines=0,Selection=0,ModeWidgets=0,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=0,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=0,Fog=1,Volumes=0,Game=1,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,AtmosphericFog=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HighResScreenshotMask=0,HMDDistortion=1,StereoRendering=0,DistanceCulledPrimitives=0,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeDistanceFieldGI=0,VisualizeMeshDistanceFields=0,ScreenSpaceAO=1,DistanceFieldAO=1,DistanceFieldGI=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,VisualizeBloom=0,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,WidgetComponents=1",BufferVisualizationMode="",ExposureSettings=(LogOffset=0,bFixed=False),FOVAngle=90.000000,FarViewPlane=0.000000,bIsRealtime=False,bShowFPS=False,bShowStats=False,EnabledStats=,bShowFullToolbar=True))
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/TwinStickBP/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.SourcesExpanded=False
@@ -89,7 +90,7 @@ ContentBrowserTab1.CurrentViewType=1
 LastLevel=/Game/TwinStickBP/Maps/TwinStickExampleMap
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 OpenAssetsAtExit=/Game/TwinStickBP/Blueprints/TwinStickProjectile.TwinStickProjectile
 
 [DetailCategories]
@@ -206,17 +207,48 @@ ParticleSystem.Performance=True
 ParticleSystem.MacroUV=True
 ParticleSystem.Occlusion=True
 ParticleSystem.Materials=True
+TwinStickPawn_C.Gameplay=True
+TwinStickPawn_C.Tick=True
+TwinStickPawn_C.Audio=True
+TwinStickPawn_C.Pawn=True
+TwinStickPawn_C.Camera=True
+TwinStickPawn_C.Rendering=True
+TwinStickPawn_C.Replication=True
+TwinStickPawn_C.Input=True
+TwinStickPawn_C.Actor=True
+ParticleModuleRequired.Emitter=True
+ParticleModuleRequired.Duration=True
+ParticleModuleRequired.Delay=True
+ParticleModuleRequired.SubUV=True
+ParticleModuleRequired.MacroUV=True
+ParticleModuleRequired.Rendering=True
+ParticleModuleRequired.ParticleCutout=True
+ParticleModuleRequired.Normals=True
+ParticleModuleRequired.Materials=True
+NewBlueprint_C.Tick=True
+NewBlueprint_C.Rendering=True
+NewBlueprint_C.Replication=True
+NewBlueprint_C.Input=True
+NewBlueprint_C.Actor=True
+My_particle_C.Tick=True
+My_particle_C.Rendering=True
+My_particle_C.Replication=True
+My_particle_C.Input=True
+My_particle_C.Actor=True
+ParticleSpriteEmitter.Particle=True
+ParticleSpriteEmitter.Cascade=True
+ParticleSpriteEmitter.Significance=True
 
 [DetailPropertyExpansion]
 ProjectileMovementComponent="\"Object.PlanarMovement.PlaneConstraintNormal\" "
 MovementComponent="\"Object.PlanarMovement.PlaneConstraintNormal\" "
-ActorComponent=
-Object=
+ActorComponent="\"Object.PlanarMovement.PlaneConstraintNormal\" "
+Object="\"Object.PlanarMovement.PlaneConstraintNormal\" "
 
 [RootWindow]
 ScreenPosition=X=91.000 Y=22.000
-WindowSize=X=1330.000 Y=770.000
-InitiallyMaximized=False
+WindowSize=X=1350.000 Y=790.000
+InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -734,6 +766,10 @@ BlueprintGraph.TimeStamp=2017.02.02-14.10.07
 BlueprintGraph.LastCompileMethod=Unknown
 MovieSceneCapture.TimeStamp=2017.02.02-14.10.23
 MovieSceneCapture.LastCompileMethod=Unknown
+Cascade.TimeStamp=2017.02.02-14.10.08
+Cascade.LastCompileMethod=Unknown
+DistCurveEditor.TimeStamp=2017.02.02-14.10.13
+DistCurveEditor.LastCompileMethod=Unknown
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
@@ -753,13 +789,16 @@ bSCCUseGlobalSettings=False
 [AssetEditorToolkitTabLocation]
 /Game/TwinStickBP/Blueprints/TwinStickProjectile.TwinStickProjectile=1
 /Engine/EditorBlueprintResources/StandardMacros.StandardMacros=1
-/Game/StarterContent/Particles/P_Fire.P_Fire=1
+/Game/StarterContent/Particles/P_Fire.P_Fire=0
+/Game/TwinStickBP/Blueprints/TwinStickPawn.TwinStickPawn=1
+/Game/My_particle.My_particle=0
 
 [MRU]
 MRUItem0=/Game/TwinStickBP/Maps/TwinStickExampleMap
 
 [DetailCategoriesAdvanced]
 K2Node_VariableSet.Variable=False
+ParticleSystemComponent.Rendering=False
 
 [/Script/UnrealEd.CascadeOptions]
 ModuleColor_Beam_Unselected=(B=235,G=150,R=160,A=0)
